crates/wac-parser/tests/parser/fail/empty-record.wac
package test:comp;

record r {}